trying solve backend roblem part2

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=8000
 mongoURL=mongodb+srv://etulkhagva:1234@batman-begins.6ejhm.mongodb.net/?retryWrites=true&w=majority&appName=batman-begins
-JWT_SECRET=t3nS8*1@!H9zE7^5wQ#vA$2rL6xM&0oK@3sR
+
+JWT_SECRET=t3nS8*1@!H9zE7^5wQ
